[tool.poetry]
name = "vpn-orchestrator"
version = "0.1.0"
description = ""
authors = ["Anna Veselova <anna.veselova.97@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.127.0"
uvicorn = { extras = ["standard"], version = "^0.30" }
pydantic = "^2.7"
pydantic-settings = "^2.3.0"
sqlalchemy = "^2.0.46"
asyncpg = "^0.31.0"
alembic = "^1.18.4"
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^1.3.0"
isort = "^7.0.0"
flake8 = "^7.3.0"
flake8-quotes = "^3.4.0"
mypy = "^1.19.1"
pre-commit = "^4.5.1"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
